--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.2.1",
+    "@nanostores/react": "github:ai/react",
     "ai": "^4.1.54",
     "next": "latest",
     "openai": "^4.86.2",
